--- a/privacy.html
+++ b/privacy.html
@@ -55,10 +55,11 @@
       <br>
       <br>
 
+<p class="lead">Data Use Policy</p>
 <p>Your privacy is critically important to us. At Slambooke we have a few fundamental principles:</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1) We don’t ask you for personal information unless we truly need it.</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2) We don’t share your personal information with anyone.</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3) We don’t store personal information on our servers unless required for the on-going operation of one of our &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;services.</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3) We don’t store personal information on our servers unless required for the on-going operation of one of our services.</p>
 </p>
 
 <br>
