--- a/terms.html
+++ b/terms.html
@@ -55,6 +55,7 @@
       <br>
       <br>
 
+<p class="lead">Slambooke Terms and Policies.</p>
 <p>This website, slambooke.com, (collectively reffered to as the "Site" in these Terms of Service) is owned and operated by Slambooke. ("we", "us" or "Slambooke."). By using and accessing our Site, you ("you", "user" or, "end user") agree to these Terms of Service (collectively, the "Terms of Service" or "Agreement").</p>
 
 <p>IF YOU DO NOT AGREE TO THE TERMS OF THIS AGREEMENT, IMMEDIATELY STOP ACCESSING THIS SITE.</p>
