--- a/404.html
+++ b/404.html
@@ -1,34 +1,73 @@
-<HTML>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+    <link rel="shortcut icon" href="img/favicon.png">
+    <title>Page not found &middot; Slambooke</title>
+    <style type="text/css" media="screen">
+      body {
+        background-color: #f1f1f1;
+        margin: 0;
+        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      }
 
-<HEAD>
-<TITLE>Oops! You bwoke it.</TITLE>
-<link rel="shortcut icon" href="img/favicon.png">
-<link rel="alternate" type="application/rss+xml" title="Homestar Runner" href="http://feeds.feedburner.com/HomestarRunner" /></HEAD>
+      .container { margin: 50px auto 40px auto; width: 600px; text-align: center; }
 
-<BODY bgcolor="black">
+      a { color: #4183c4; text-decoration: none; }
+      a:hover { text-decoration: underline; }
 
-<br>
-<br>
+      h1 { width: 800px; position:relative; left: -100px; letter-spacing: -1px; line-height: 60px; font-size: 60px; font-weight: 100; margin: 0px 0 50px 0; text-shadow: 0 1px 0 #fff; }
+      p { color: rgba(0, 0, 0, 0.5); margin: 20px 0; line-height: 1.6; }
 
-<div align="center"><OBJECT classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
- codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=5,0,0,0"
- WIDTH=550 HEIGHT=400>
- <PARAM NAME=movie VALUE="404error.swf"> <PARAM NAME=loop VALUE=false> <PARAM NAME=menu VALUE=false> <PARAM NAME=quality VALUE=high> <PARAM NAME=bgcolor VALUE=#FFFFFF> <EMBED src="404error.swf" loop=false menu=false quality=high bgcolor=#FFFFFF  WIDTH=550 HEIGHT=400 TYPE="application/x-shockwave-flash" PLUGINSPAGE="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"></EMBED>
-</OBJECT></div>
+      ul { list-style: none; margin: 25px 0; padding: 0; }
+      li { display: table-cell; font-weight: bold; width: 1%; }
 
-<center>
-	<p><font color="white">Slambooke &#169 2014</font>
-	  &nbsp;&nbsp;<a href="blackboard.html"><font color="white">Home</font></a>
-      &nbsp;&nbsp;<a href="company.html"><font color="white">About</font></a>
-      &nbsp;&nbsp;<a href="developer.html"><font color="white">Developer</font></a>
-      &nbsp;&nbsp;<a href="support.html"><font color="white">Support</font></a>
-      &nbsp;&nbsp;<a href="terms.html"><font color="white">Terms</font></a>
-      &nbsp;&nbsp;<a href="privacy.html"><font color="white">Privacy</font></a>
-      &nbsp;&nbsp;<a href="status.html"><font color="white">Status</font></a>
-    </p>
-</center>  
+      .logo { display: inline-block; margin-top: 35px; }
+      .logo-img-2x { display: none; }
+      @media
+      only screen and (-webkit-min-device-pixel-ratio: 2),
+      only screen and (   min--moz-device-pixel-ratio: 2),
+      only screen and (     -o-min-device-pixel-ratio: 2/1),
+      only screen and (        min-device-pixel-ratio: 2),
+      only screen and (                min-resolution: 192dpi),
+      only screen and (                min-resolution: 2dppx) {
+        .logo-img-1x { display: none; }
+        .logo-img-2x { display: inline-block; }
+      }
 
+      #suggestions {
+        margin-top: 35px;
+        color: #ccc;
+      }
+      #suggestions a {
+        color: #666666;
+        font-weight: 200;
+        font-size: 14px;
+        margin: 0 10px;
+      }
 
-</BODY>
+    </style>
+  </head>
+  <body>
 
-</HTML>
+    <div class="container">
+
+      <h1>404</h1>
+      <p><strong>There isn't a Slambooke Page here.</strong></p>
+
+      <p><em>Are you trying to publish one?</em>
+        It may take up to ten minutes until your page is available.
+      </p>
+
+      <div id="suggestions">
+        <a href="blackboard.html">Go to home page</a> &mdash;
+        <a href="status.html">Slambooke Status</a> &mdash;
+        <a href="https://twitter.com/githubstatus">Contact Support</a>
+      </div>
+
+      <a href="/" class="logo logo-img-1x">
+        <img width="32" height="32" title="" alt="" src="img/favicon.png">
+      </a>
+    </div>
+  </body>
+</html>
