--- a/404.html
+++ b/404.html
@@ -53,16 +53,16 @@
     <div class="container">
 
       <h1>404</h1>
-      <p><strong>There isn't a Slambooke Page here.</strong></p>
+      <p><strong>The page you were looking for does not exist or this might be an error!</strong></p>
 
-      <p><em>Are you trying to publish one?</em>
-        It may take up to ten minutes until your page is available.
+      <p>
+        You may have mistyped the address or the page has moved. You can return to our <a href="blackboard.html">home page</a>, or <a target="_blank" href="https://twitter.com/slambookeapp">contact support</a> if you can't find what you're looking for. 
       </p>
 
       <div id="suggestions">
         <a href="blackboard.html">Go to home page</a> &mdash;
         <a href="status.html">Slambooke Status</a> &mdash;
-        <a href="https://twitter.com/githubstatus">Contact Support</a>
+        <a href="https://twitter.com/slambookeapp">Contact Support</a>
       </div>
 
       <a href="/" class="logo logo-img-1x">
