--- a/company.html
+++ b/company.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="img/favicon.png">
 
-    <title>Slambooke / Company / About</title>
+    <title>Company</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrapcompany.min.css" rel="stylesheet">
@@ -63,7 +63,7 @@
       <div class="panel-body">
       <img src="img/company.jpg" width="866" height="350">
       <div class="page-header">
-      	<center><p><font size="3"><font color = "1a5b8f" style = "font-size: 17px"><strong>What is slambooke?</strong></font><br>A web application that organizes schools information and make it universally accessible and useful.</p></font></center><br>
+      	<center><p><font size="3"><font color = "1a5b8f" style = "font-size: 17px"><strong>What is Slambooke?</strong></font><br>A web application that organizes schools information and make it universally accessible and useful.</p></font></center><br>
 
       	<br />
 
@@ -71,7 +71,7 @@
 
         <br />
 
-        <center><p><font size="3"><font color = "1a5b8f" style = "font-size: 17px"><strong>Our vision:</strong></font> <br>Our vision is to make schools more open and connected as well as make their informations universally accessible and useful to everyone in the world.</p></font></center><br>
+        <center><p><font size="3"><font color = "1a5b8f" style = "font-size: 17px"><strong>Our Vision:</strong></font> <br>Our vision is to make schools more open and connected as well as make their informations universally accessible and useful to everyone in the world.</p></font></center><br>
       </div>
 
       <br>
