--- a/events.html
+++ b/events.html
@@ -176,7 +176,7 @@
 					<div class="col-md-12">
 						<div align="center"><br>
     					<img class="img-circle" src="img/balloon.png" width="250" height="250">
-						<h4 class="cover-heading text-center">Oh hey, we are sorry, there are no <strong>"events"</strong> at the moment!</h4>
+						<h4 class="cover-heading text-center">Oh hey sorry, we haven't hosted any <strong>"Developer Events"</strong> at the moment!</h4>
 					</div>
 				</div>
 			</div>
