--- a/privacy.html
+++ b/privacy.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="img/favicon.png">
 
-    <title>Slambooke / Privacy Policy</title>
+    <title>Privacy Policy</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrapcompany.min.css" rel="stylesheet">
