--- a/school/polytechnics.html
+++ b/school/polytechnics.html
@@ -227,7 +227,7 @@
                        <a href="polytechnic/accra_polytechnic.html"> <img src="polytechnic/img/logos/accra_poly.jpg" height="90" width="90">
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="polytechnic/accra_polytechnic.html">Accra Polytechnic</a></strong></h4>
                     <h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location"> </i>  Barnes Rd - Greater Accra</h5>
-                    <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-rss"> </i><font color = "005ad9"> 0302689276</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> registrar@ug.apt.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://www.apoly.edu.gh" target ="_blank"> www.apoly.edu.gh</a></font>
+                    <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 030-268-9276</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> registrar@ug.apt.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://www.apoly.edu.gh" target ="_blank"> www.apoly.edu.gh</a></font>
                 </div>
 
                 <div class="items info-block block-info clearfix">
@@ -235,7 +235,7 @@
                          <a href="polytechnic/tamale_polytechnic.html"> <img src="polytechnic/img/logos/tamale_poly.JPG" height="90" width="90">
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="polytechnic/tamale_polytechnic.html">Tamale Polytechnic</a></strong></h4>
                     <h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location"> </i>  Tamale - Nothing Region </h5>
-                    <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-rss"> </i><font color = "005ad9"> 0372023850</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9">registrar@tamalepoly.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href=" http://www.tamalepoly.edu.gh/" target ="_blank"> www.tamalepoly.edu.gh</a></font>
+                    <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> N/A</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> registrar@tamalepoly.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href=" http://www.tamalepoly.edu.gh/" target ="_blank"> www.tamalepoly.edu.gh</a></font>
                 </div>
 
                 <div class="items info-block block-info clearfix">
@@ -243,7 +243,7 @@
                        <a href="polytechnic/sunyani_polytechnic.html"> <img src="polytechnic/img/logos/sunyani_poly.JPG" height="90" width="90">
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="polytechnic/sunyani_polytechnic.html">Sunyani Polytechnic</a></strong></h4>
                     <h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location"> </i>  Sunyani - BronAhafo Region</h5>
-                    <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-rss"> </i><font color = "005ad9"> 0352027052</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> admissions@spoly.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href=" http://www.spoly.edu.gh/" target ="_blank"> www.spoly.edu.gh</a></font>
+                    <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> N/A</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> admissions@spoly.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href=" http://www.spoly.edu.gh/" target ="_blank"> www.spoly.edu.gh</a></font>
                 </div>
 
                 <div class="items info-block block-info clearfix">
@@ -251,7 +251,7 @@
                         <a href="polytechnic/kumasi_polytechnic.html"> <img src="polytechnic/img/logos/kumasi_poly.JPG" height="90" width="90">
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="polytechnic/kumasi_polytechnic.html">Kumasi Polytechnic</a></strong></h4>
                     <h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location"> </i>  Kumasi - Ashanti Region</h5>
-                    <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-rss"> </i><font color = "005ad9"> 032222387</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> registrar@kpoly.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://kpoly.edu.gh/" target ="_blank"> www.kpoly.edu.gh</a></font>
+                    <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> N/A</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> registrar@kpoly.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://kpoly.edu.gh/" target ="_blank"> www.kpoly.edu.gh</a></font>
                 </div>
 
                 <div class="items info-block block-info clearfix">
@@ -259,7 +259,7 @@
                        <a href="polytechnic/ho_polytechnic.html"> <img src="polytechnic/img/logos/ho_poly.jpg" height="90" width="90">
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="polytechnic/ho_polytechnic.html">Ho Polytechnic</a></strong></h4>
                     <h5> &nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location"> </i>  Ho - Volta Region</h5>
-                    <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-rss"> </i><font color = "005ad9"> 02333620</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9">   info@hopoly.edu.gh </font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://htp.edu.gh/" target ="_blank"> www.hopoly.edu.gh</a></font>
+                    <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> N/A</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9">   info@hopoly.edu.gh </font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://htp.edu.gh/" target ="_blank"> www.hopoly.edu.gh</a></font>
                 </div>
 			</div>
 		</div><!-- /panel -->
