--- a/school/public_universities.html
+++ b/school/public_universities.html
@@ -241,14 +241,14 @@
 		                   <a href="university/university_of_ghana_legon.html"><img src="img/legon.jpg" height="90" width="90">
 		                </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/university_of_ghana_legon.html">University of Ghana (LEGON)</a></strong></h4>
 		                <h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style="color:"> </i>  Legon, Greater Accra</h5>
-		                <span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-rss"> </i><font color = "005ad9"> 030-250-0381</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> pad@ug.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://www.ug.edu.gh//" target ="_blank"> www.ug.edu.gh</a></font>
+		                <span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 030-250-0381</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> pad@ug.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://www.ug.edu.gh//" target ="_blank"> www.ug.edu.gh</a></font>
 		            </div>
 
 		            <div class="items info-block block-info clearfix">
 		                <div class="img-thumbnail pull-left">
 		                     <a href="university/knust.html"><img src="img/knust.jpg" height="90" width="90">
 		                </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/knust.html">Kwame Nkrumah University of Science and Technology (KNUST)</a></strong></h4><h5> &nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style="color:"> </i>  Kumasi, Ashanti Region</h5>
-		                <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-rss"> </i><font color = "005ad9"> 032-206-0331</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> registrar@knust.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href=" http://www.knust.edu.gh" target ="_blank"> www.knust.edu.gh</a></font>
+		                <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 032-206-0331</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> registrar@knust.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href=" http://www.knust.edu.gh" target ="_blank"> www.knust.edu.gh</a></font>
 		            </div>
 
 		            <div class="items info-block block-info clearfix">
@@ -256,7 +256,7 @@
 		                   <a href="university/university_of_cape_coast.html"><img src="img/ucc.png" height="90" width="90">
 		                </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/university_of_cape_coast.html">University of Cape Coast (UCC)</a></strong></h4>
 		                <h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style="color:"> </i>  Capecoast, Central Region</h5>
-		                <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-rss"> </i><font color = "005ad9"> 033-213-2480</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> admissions@ucc.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href=" http://www.ucc.edu.gh/" target ="_blank"> www.ucc.edu.gh</a></font>
+		                <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 033-213-2480</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> admissions@ucc.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href=" http://www.ucc.edu.gh/" target ="_blank"> www.ucc.edu.gh</a></font>
 		            </div>
 
 		            <div class="items info-block block-info clearfix">
@@ -264,35 +264,35 @@
 		                    <a href="university/uds.html"> <img src="img/uds.jpg" height="90" width="90">
 		                </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/uds.html">University for Development Studies (UDS)</a></strong></h4>
 		                <h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style="color:"> </i>  Tamale, Northern Region</h5>
-		                <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-rss"> </i><font color = "005ad9"> 037-202-2078</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> registrar@uds.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://www.uds.edu.gh" target ="_blank"> www.uds.edu.gh</a></font>
+		                <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 037-202-2078</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> registrar@uds.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://www.uds.edu.gh" target ="_blank"> www.uds.edu.gh</a></font>
 		            </div>
 
 		            <div class="items info-block block-info clearfix">
 		                <div class="img-thumbnail pull-left">
 		                   <a href="university/university_of_education_winneba.html"> <img src="img/winneba.png" height="90" width="90">
 		                </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/university_of_education_winneba.html">University Of Education (UEW)</a></strong></h4><h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style="color:"> </i>  Winneba, Central Region</h5>
-		                <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-rss"> </i><font color = "005ad9"> 033-232-2021</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9">  ucew@ug.gn.apc.org </font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://uew.edu.gh/" target ="_blank"> www.uew.edu.gh</a></font>
+		                <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 033-232-2021</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9">  ucew@ug.gn.apc.org </font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://uew.edu.gh/" target ="_blank"> www.uew.edu.gh</a></font>
 		            </div>
 
 		            <div class="items info-block block-info clearfix">
 		                <div class="img-thumbnail pull-left">
 		                   <a href="university/university_of_mines_and_technology.html"> <img src="img/umat.png" height="90" width="90">
 		                </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/university_of_mines_and_technology.html">University Of Mines & Technology (UMAT)</a></strong></h4><h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style="color:"></i>  Tarkwa, Western Region</h5>
-		                <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-rss"> </i><font color = "005ad9"> 031-232-0324</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> registrar@umat.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://umat.edu.gh/" target ="_blank"> www.umat.edu.gh</a></font>
+		                <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 031-232-0324</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> registrar@umat.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://umat.edu.gh/" target ="_blank"> www.umat.edu.gh</a></font>
 		            </div>
 
 		            <div class="items info-block block-info clearfix">
 		                <div class="img-thumbnail pull-left">
 		                    <a href="university/university_of_professional_studies.html"> <img src="img/upsa.png" height="100" width="90">
 		                </div><h4><strong>&nbsp;&nbsp;&nbsp;&nbsp;<a href="university/university_of_professional_studies.html">University of Professional Studies (UPSA)</a></strong></h4><h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style="color:"></i>  Accra, Greater Accra Region</h5>
-		                <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-rss"> </i><font color = "005ad9"> 030-250-0171</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> admin@upsa.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://upsa.edu.gh//" target ="_blank"> www.upsa.edu.gh</a></font>
+		                <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 030-250-0171</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> admin@upsa.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://upsa.edu.gh//" target ="_blank"> www.upsa.edu.gh</a></font>
 		            </div>
 					
 					<div class="items info-block block-info clearfix">
 		                <div class="img-thumbnail pull-left" >
 		                    <a href="university/ghana_telecom_university_college.html"><img src="img/ghanatelecom.jpg" height="90" width="90"> 
 		                </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="university/ghana_telecom_university_college.html">Ghana Telecom University College (GTUC)</a></strong></h4><h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style="color:"></i>  Abeka, Greater Accra Region</h5>
-		                <span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-rss"> </i><font color = "005ad9"> 030-220-0611</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> admission@gtuc.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://gtuc.edu.gh/" target ="_blank"> www.gtuc.edu.gh</a></font>
+		                <span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 030-220-0611</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> admission@gtuc.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://gtuc.edu.gh/" target ="_blank"> www.gtuc.edu.gh</a></font>
 		            </div>
 
 		            <div class="items info-block block-info clearfix">
@@ -300,7 +300,7 @@
 		                    <a href="university/ghana_institute_of_management_and_public_administration.html"><img src="img/greenhill.png" height="90" width="90"> 
 		                </div><h4><strong>&nbsp;&nbsp;&nbsp;<a href="university/ghana_institute_of_management_and_public_administration.html">Ghana Institute of Management and Public Administration (GIMPA)</a></strong></h4>
 		              	<h5>&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location" style="color:"></i>  Accra, Greater Accra Region</h5>
-		                <span>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-rss"> </i><font color = "005ad9"> 030-240-1681-3</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> info@gimpa.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href=" http://www.gimpa.edu.gh/" target ="_blank"> www.gimpa.edu.gh</a></font>
+		                <span>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 030-240-1681-3</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> info@gimpa.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href=" http://www.gimpa.edu.gh/" target ="_blank"> www.gimpa.edu.gh</a></font>
 		            </div>
 				</div>
 			</div>
