--- a/school/senior_high_schools.html
+++ b/school/senior_high_schools.html
@@ -227,7 +227,7 @@
                        <a href="public_senior_high/accra_academy.html"> <img src="public_senior_high/img/logos/accra_aca.jpg" height="95" width="90">
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="public_senior_high/accra_academy.html">Accra Academy</a></strong></h4>
                     <h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location"> </i>  Okai Koi, Greater Accra</h5>
-                    <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-rss"> </i><font color = "005ad9"> 030 222 1721</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> N/A</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://accra-aca.com/" target ="_blank">www.accra-aca.com</a></font>
+                    <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 030 222 1721</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> N/A</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://accra-aca.com/" target ="_blank">www.accra-aca.com</a></font>
                 </div>
               
                 <div class="items info-block block-info clearfix">
@@ -235,7 +235,7 @@
                          <a href="public_senior_high/wesley_girls.html"> <img src="public_senior_high/img/logos/wesley_girls.jpg" height="85" width="90">
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="public_senior_high/wesley_girls.html">Wesley Girls</a></strong></h4>
                     <h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location"> </i>  Cape Coast, Central Region</h5>
-                    <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-rss"> </i><font color = "005ad9"> 033 213 2218</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> N/A</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://uew.edu.gh/" target ="_blank"> www.wesgey.edu.gh</a></font>
+                    <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 033 213 2218</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> N/A</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://uew.edu.gh/" target ="_blank"> www.wesgey.edu.gh</a></font>
                 </div>
           
                 <div class="items info-block block-info clearfix">
@@ -243,7 +243,7 @@
                        <a href="public_senior_high/adisadel_boys.html"> <img src="public_senior_high/img/logos/adisadel.png" height="90" width="90">
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="public_senior_high/adisadel_boys.html">Adisadel College</a></strong></h4>
                     <h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location"> </i>  Capecoast, Central Region</h5>
-                    <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-rss"> </i><font color = "005ad9"> 555-555-5555</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> adisco@outlook.com</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://uew.edu.gh/" target ="_blank"> www.adisco.edu.gh</a></font>
+                    <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> N/A</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> adisco@outlook.com</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://uew.edu.gh/" target ="_blank"> www.adisco.edu.gh</a></font>
                 </div>            
 
                 <div class="items info-block block-info clearfix">
@@ -251,7 +251,7 @@
                        <a href="public_senior_high/saint_augustine's_college.html"> <img src="public_senior_high/img/logos/saint_augustines.jpg" height="90" width="90">
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="public_senior_high/saint_augustine's_college.html">Saint Augustine's </a></strong></h4>
                     <h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location"> </i>  Cape Coast, Central Region</h5>
-                    <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-rss"> </i><font color = "005ad9"> 555-555-5555</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> augusco@gmail.com</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://uew.edu.gh/" target ="_blank"> www.augusco.edu.gh</a></font>
+                    <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> N/A</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> augusco@gmail.com</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://uew.edu.gh/" target ="_blank"> www.augusco.edu.gh</a></font>
                 </div>
 			</div>
 		</div><!-- /panel -->
