--- a/support.html
+++ b/support.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="img/favicon.png">
     
-    <title>Slambooke / Support</title>
+    <title>Support</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrapcompany.min.css" rel="stylesheet">
@@ -28,21 +28,20 @@
    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
           <div class="navbar-header">
-            <a class="navbar-brand" href="faq.html"><a class="navbar-brand text-logo animated fadeInLeft" href="support.html"><img src="img/slambooke.png" width="30" height="30"><strong><font color="black"> / Support</font></strong></a>
+            <a class="navbar-brand" href="support.html">
+            <img src="img/slambooke.png" width="30" height="30"><strong><font color="black"> / Support</font></strong></a>
           </div>
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav pull-right">
-              <li class="active"><a href="blackboard.html"><strong>Return to Home</strong></a></li>
+              <li class="active"><a href="blackboard.html"><strong>&nbsp;Home&nbsp;</strong></a></li>
+              <li><a href=""><strong>&nbsp;Contact a human&nbsp;</strong></a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
       </div>
 
-
 <br>
 <br>
-<br>
-
 
 <div align="center"><br>
         <img class="img-" src="img/help.png" alt="">
@@ -52,10 +51,11 @@
       <div class="row">
 
         <div class="col-lg-12">
-          <h3 class="page-header">Help <small>Frequently Asked Questions</small></h3>
+          <h3 class="page-header"><small>Frequently Asked Questions</small></h3>
           <ol class="breadcrumb">
             <li><a href="blackboard.html">Home</a></li>
             <li class="active">Help</li>
+            <li class="active">Frequently Asked Questions</li>
           </ol>
         </div>
 
