--- a/terms.html
+++ b/terms.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="img/favicon.png">
 
-    <title>Slambooke / Terms of Service</title>
+    <title>Terms of Service</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrapcompany.min.css" rel="stylesheet">
@@ -37,7 +37,7 @@
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand" href="terms.html"><img src="img/slambooke.png" width="30" height="30">
-          <font color="black"><strong> / Terms of service</strong></font></a>
+          <font color="black"><strong> / Terms of Service</strong></font></a>
         </div>
         <div class="collapse navbar-collapse pull-right">
           <ul class="nav navbar-nav">
