--- a/status.html
+++ b/status.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="img/favicon.png">
 
-    <title>Slambooke / Platform Status</title>
+    <title>Website Status</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrapcompany.min.css" rel="stylesheet">
@@ -37,7 +37,7 @@
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand animated bounceInDown" href="status.html"><img src="img/slambooke.png" width="30" height="30">
-          <font color="black"><strong> / Platform Status</strong></font></a>
+          <font color="black"><strong> / Website Status</strong></font></a>
         </div>
         <div class="collapse navbar-collapse pull-right">
           <ul class="nav navbar-nav">
