--- a/blackboard.html
+++ b/blackboard.html
@@ -627,7 +627,7 @@
 							<div class="panel panel-default">
 								<div class="panel-body">
 									<a class="pull-left avatar"> 
-										<img src="school/img/gij.jpg" class="img-" alt="school logo"> 
+										<img src="school/img/gij.JPG" class="img-" alt="school logo"> 
 									</a>
 									<div class="pull-left m-left-sm">
 										<strong class="font-14 block">Ghana Institute of Journalism</strong>
