Fix for Accra Institute of Technology

--- a/blackboard.html
+++ b/blackboard.html
@@ -427,7 +427,7 @@
 						<div class="panel panel-default">
 							<div class="panel-body">
 								<a class="pull-left avatar"> 
-									<img src="school/img/accra_institute_of_technology_logo.jpg" class="img-" alt="school logo"> 
+									<img src="school/img/accra_institute_of_technology_logo.JPG" class="img-" alt="school logo"> 
 								</a>
 								<div class="pull-left m-left-sm">
 									<strong class="font-14 block">Accra Institute of Technology</strong>
