--- a/school/university/accra_institute_of_technology.html
+++ b/school/university/accra_institute_of_technology.html
@@ -184,7 +184,7 @@
 							<div class="easypiechart" data-percent="75" data-line-width="5" data-loop="false" data-bar-color="#92cf5c" data-track-Color="#f5f5f5" data-scale-Color="false" data-size="150"> 
 
 								<div class="thumb-lg"> 
-									<img src="img/accra_institute_of_technology_logo.jpg" class="img-" width="159" height="170" /> 
+									<img src="img/accra_institute_of_technology_logo.JPG" class="img-" width="159" height="170" /> 
 								</div> 
 							</div> 
 							<br/>
