--- a/school/university/accra_institute_of_technology.html
+++ b/school/university/accra_institute_of_technology.html
@@ -269,7 +269,7 @@
 									<font color= "1a5b8f"><h4><strong>AIT</strong></h4> </font>
 										<p><strong>Accra Institute of Technology</strong></p><br>
 
-										<p>popularly known as AIT, is an independent technology-focused research university, based in Accra, Ghana.
+										<p>Popularly known as AIT, is an independent technology-focused research university, based in Accra, Ghana.
 										 AIT is committed to academic excellence, cutting-edge research and Research and development work. 
 										 The University is modeled on internationally recognized institutes of technologies like the Massachusetts Institute of Technology and the California Institute of Technology both ranked in the top 10 of the world ranking of universities. </p><br>
 
