--- a/school/university/ghana_institute_of_journalism.html
+++ b/school/university/ghana_institute_of_journalism.html
@@ -200,7 +200,7 @@
 							<div class="easypiechart" data-percent="75" data-line-width="5" data-loop="false" data-bar-color="#92cf5c" data-track-Color="#f5f5f5" data-scale-Color="false" data-size="150"> 
 
 								<div class="thumb-lg"> 
-									<img src="img/gij.jpg" class="img-" width="159" height="159" /> 
+									<img src="img/gij.JPG" class="img-" width="159" height="159" /> 
 								</div> 
 							</div> 
 							<br/>
