Remove animation from Blackboard

--- a/blackboard.html
+++ b/blackboard.html
@@ -215,7 +215,7 @@
 						</h4>
 					</div>
 
-					<div class="col-md-4 animated bounceInRight animation-delay6">
+					<div class="col-md-4">
 						<div class="panel panel-default">
 							<div class="panel-body">
 								<a class="pull-left avatar"> 
@@ -462,7 +462,7 @@
 
 
 					<!-- /Second School -->
-					<div class="col-md-4 animated bounceInRight animation-delay8">
+					<div class="col-md-4">
 						<div class="panel panel-default">
 								<div class="panel-body">
 									<a class="pull-left avatar"> 
