Test legon second image

--- a/school/university/university_of_ghana_legon.html
+++ b/school/university/university_of_ghana_legon.html
@@ -336,8 +336,8 @@
 					</a><!-- /image-wrapper -->
 				</div><!-- /gallery-item -->
 				<div class="gallery-item">
-					<a class="image-wrapper" data-lightbox="example-1"  href="img/legon/2.JPG">
-						<img src="img/legon/2.JPG" alt="gallery2">
+					<a class="image-wrapper" data-lightbox="example-1"  href="img/legon/2.jpg">
+						<img src="img/legon/2.jpg" alt="gallery2">
 						<div class="image-overlay">
 							<div class="image-info">
 								
