--- a/school/university/university_of_ghana_legon.html
+++ b/school/university/university_of_ghana_legon.html
@@ -261,7 +261,7 @@
 							<div class="panel-body">
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="about1">
-										<font color= "1a5b8f"><h2><strong>UGL</strong></h2></font>
+										<font color= "1a5b8f"><h3><strong>Legon</strong></h3></font>
 									<p><strong>University Of Ghana Legon</strong></p><br>
 							
 							
