--- a/school/university/university_of_ghana_legon.html
+++ b/school/university/university_of_ghana_legon.html
@@ -662,7 +662,7 @@
 							<br>
 
 					<h5 class="headline">
-							<p>Slambooke ©2014 English</p>
+							<p>Slambooke © 2014</p>
 					</div><!-- /.col -->
 				</div><!-- /.row-->
 			</div><!-- /.padding20 -->
