--- a/school/university/uds.html
+++ b/school/university/uds.html
@@ -48,13 +48,6 @@
 		
 		<aside class="fixed skin-6">	
 			<div class="sidebar-inner scrollable-sidebar">
-				<div class="size-toggle">
-					<a class="btn btn-sm" id="sizeToggle">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</a>
-				</div><!-- /size-toggle -->
 				<div class="main-menu">
 					<ul>
 						<li>
@@ -267,7 +260,7 @@
 							<div class="panel-body">
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="about1">
-										<font color= "1a5b8f"><h4><strong>UDS</strong></h4> </font>
+										<font color= "1a5b8f"><h3><strong>UDS</strong></h3></font>
 										<p><strong>University of Development Studies</strong></p><br>
 
 										<p>The University of Development Studies was established in 1992 as a community-based, practical-oriented and problem solving institution. 	It is meant to fill the yawning gap in education and development in the northern sector of the country. It's vision is to become the home of World class pro-poor scholarship and it's motto is "Knowlege for service".   <br><br>It is a Multi-campus University with campuses located in Tamale, Nyankpala, Navrongo and Wa all the north of the country, with it's central administration site at Tamale. Other campuses are expected to be developed in due course. It's range of programmes and facilities are currently limited, however, it offers highly competitive courses and the university is growing very rapidly.<br><br>For example, in 2007/08, total student population was 8,042 with a total academic staff of 159. In 2003/04 total student population was 2,845 and in 2004/05 total student population rose to 3,991 and again to 6,630 in 2006/07. In 2007/08, 7,470 students applied for admission and only 2,450 were taken. The break down in the 2007/08 admissions is as follows:<br><br>1,550 students applied for the Agric Technology course and only 450 was taken, 600 applied for Medicine and only 40 were taken. 1,900 applied for the Applied Sciences and only 650 were taken. 2,650 applied for Integrated Development Studies and only 1,200 were taken and 320 applied for Community Nutrition and only 100 were taken. In 2004/05 academic year, 3,536 candidates applied for admission, 1,918 were admitted and 1,418 were enrolled. In 2006/07, admission rose to 2,640 made up of 1,931 males and 709 females.</p><br>
@@ -445,7 +438,7 @@
 							<br>
 							
 							<h5 class="headline">
-							<p><strong>Slambooke ©2014 English</strong></p>
+							<p><strong>Slambooke © 2014</p>
 					</div><!-- /.col -->
 				</div><!-- /.row-->
 			</div><!-- /.padding20 -->
