--- a/school/university/university_of_education_winneba.html
+++ b/school/university/university_of_education_winneba.html
@@ -48,13 +48,6 @@
 		
 		<aside class="fixed skin-6">	
 			<div class="sidebar-inner scrollable-sidebar">
-				<div class="size-toggle">
-					<a class="btn btn-sm" id="sizeToggle">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</a>
-				</div><!-- /size-toggle -->
 				<div class="main-menu">
 					<ul>
 						<li>
@@ -266,7 +259,7 @@
 							<div class="panel-body">
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="about1">
-							<font color= "1a5b8f"><h4><strong>UEW</strong></h4> </font>
+										<font color= "1a5b8f"><h3><strong>UEW</strong></h3></font>
 									<p><strong>University of Education, Winneba</strong></p><br>
 							
 							
@@ -577,7 +570,7 @@
 
 
 					<h5 class="headline">
-							<p><strong>Slambooke ©2014 English</strong></p>
+							<p>Slambooke © 2014</p>
 					</div><!-- /.col -->
 				</div><!-- /.row-->
 			</div><!-- /.padding20 -->
