--- a/school/university/university_of_mines_and_technology.html
+++ b/school/university/university_of_mines_and_technology.html
@@ -48,13 +48,6 @@
 		
 		<aside class="fixed skin-6">	
 			<div class="sidebar-inner scrollable-sidebar">
-				<div class="size-toggle">
-					<a class="btn btn-sm" id="sizeToggle">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</a>
-				</div><!-- /size-toggle -->
 				<div class="main-menu">
 					<ul>
 						<li>
@@ -266,7 +259,7 @@
 							<div class="panel-body">
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="about1">
-										<font color= "1a5b8f"><h4><strong>UMAT</strong></h4> </font>
+											<font color= "1a5b8f"><h3><strong>UMAT</strong></h3></font>
 										<p><strong>University Of Mines & Technology</strong></p><br>
 
 											<p>The University of Mines & Technology (UMAT) which used to be called the KNUST School of Mines, then the Western University College of KNUST, Tarkwa and affiliated to the Kwame Nkrumah University of Science and Technology has now become autonomous under the above new name, since 2005/06 academic year.</p><br>
@@ -481,7 +474,7 @@
 							<br>
 							
 							<h5 class="headline">
-							<p><strong>Slambooke ©2014 English</strong></p>
+							<p>Slambooke © 2014</p>
 					</div><!-- /.col -->
 				</div><!-- /.row-->
 			</div><!-- /.padding20 -->
